--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
             </div>
             <div class="space-y-2 text-amber-100">
               <p><i class="fas fa-birthday-cake ml-2"></i> سنة الميلاد: ${player.year}</p>
-              <p><i class="fas fa-futbol ml-2"></i> المركز: ${player.position}</p>
+              </i> المركز: ${player.position}</p>
               <p class="text-sm text-amber-200/70"><i class="fas fa-clock ml-2"></i> وقت التسجيل: ${player.timestamp}</p>
             </div>
           `;
